# wsprobe

./: .gitignore  LICENSE  README.md  install-wsprobe.sh  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.cfg  wsli
.cursor/rules/: chrome-devtools-mcp-fast.mdc  trading-workspace.mdc
.github/workflows/: ci.yml  publish-npm.yml
docs/: STEPS_SNAPTRADE_ORDER.md
python_reference/: __init__.py  __main__.py  client.py  credentials.py  example.config.json  export_session_console.js  export_session_console.min.js  oauth_refresh.py  queries.py  ui_app.py
python_reference/static/: index.html
reports/: WS-report.md  cemx-limit-buy-graphql-implementation-report.md  cemx-sell-graphql-implementation-report.md  keepalive-behavior-report.md  mchp-fractional-buy-graphql-flow-report.md  oauth-keepalive-runtime-architecture-report.md  wealthsimple-buying-system-backend-report.md  wealthsimple-web-auth-and-graphql-session-architecture-report.md
scripts/setup/: check_snaptrade_env.sh
scripts/snaptrade/: buy_tsx.py  check_accounts.py  check_all_users.py  check_price.py  connect_then_buy.py  get_omar_portal.py  get_portal_url.py  list_snaptrade_users.py  refresh_connection.py  register_snaptrade_user.py  wait_accounts_then_buy.py
src/: index.ts
test/: cli-smoke.test.mjs
tests/: test_oauth_refresh.py
wsli/: package-lock.json  package.json
wsli/src/: index.ts
wsprobe/: browser_cookies.py  cli.py  client.py  credentials.py  export_session_console.js  oauth_refresh.py  queries.py  trade_service.py  ui_app.py
wsprobe/static/: index.html
