[metadata]
name = wsprobe
version = 0.7.1
description = Wealthsimple GraphQL read-only probe CLI

[options]
packages = wsprobe
python_requires = >=3.9
include_package_data = True
install_requires =
    browser-cookie3>=0.16.0

[options.package_data]
wsprobe =
    static/index.html
    export_session_console.js
    export_session_console.min.js

[options.extras_require]
# same as default; kept so `pip install wsprobe[browser]` still works in docs
browser =
    browser-cookie3>=0.16.0
web =
    fastapi>=0.110.0
    uvicorn[standard]>=0.29.0

[options.entry_points]
console_scripts =
    wsp = wsprobe.cli:main
    wsprobe = wsprobe.cli:main
    wsprobe-serve = wsprobe.ui_app:main
